--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.3]
+        php: [8.2, 8.3]
         stability: [prefer-lowest, prefer-stable]
 
     name: Unit Tests (${{matrix.php}}, ${{ matrix.os }}, ${{ matrix.stability }})
