--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "phpstan/phpstan": "^1.11",
         "ergebnis/composer-normalize": "^2.43",
         "phpunit/phpunit": "^10.2",
-        "squizlabs/php_codesniffer": "^2.2",
-        "symfony/var-dumper": "^7.1"
+        "squizlabs/php_codesniffer": "^2.2"
     },
     "license": "MIT",
     "autoload": {
