--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "async"
     ],
     "require": {
+        "php": "^8.1",
         "kafkiansky/binary": "^0.3.0",
         "amphp/http-client": "^5.1"
     },
